<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ViewTaskActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="350dp"
                android:orientation="horizontal"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="30dp">

                <ImageView
                    android:id="@+id/imageViewUser"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginRight="40dp"
                    android:src="@drawable/ic_account_circle_black_24dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/userNameTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/userName"
                        android:textColor="@color/colorBlue"
                        android:fontFamily="@font/proxima_nova_bold"
                        android:textSize="28sp"
                        app:layout_constraintStart_toEndOf="@+id/imageViewUser"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/daysLeftTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/taskDate"
                        android:textColor="@color/colorOutline"
                        android:fontFamily="@font/proxima_nova_regular"
                        android:textSize="14sp"
                        app:layout_constraintStart_toEndOf="@+id/imageViewUser"
                        app:layout_constraintTop_toBottomOf="@+id/userNameTextView" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/linearLayout"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/status"
                android:textColor="#000000"
                android:fontFamily="@font/proxima_nova_bold"/>

            <TextView
                android:id="@+id/statusTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/status"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/taskStatus"
                android:textStyle="italic"
                android:fontFamily="@font/proxima_nova_regular"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                app:layout_constraintHorizontal_bias="0.5"/>


            <TextView
                android:id="@+id/allotedTask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/statusTextView"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:text="@string/allotted"
                android:textColor="#000000"
                android:fontFamily="@font/proxima_nova_bold"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp"
                android:elevation="50dp"
                app:cardCornerRadius="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/allotedTask">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/taskNameTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/taskName"
                        android:textColor="@color/colorBlue"
                        android:fontFamily="@font/proxima_nova_bold"
                        android:textSize="20dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"/>
                    <ImageView
                        android:id="@+id/taskImageView"
                        android:layout_width="180dp"
                        android:layout_height="150dp"
                        android:src="@drawable/ic_crop_original_black_24dp"
                        android:layout_marginTop="10dp"
                        android:adjustViewBounds="true"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:paddingLeft="30dp"
                        android:paddingRight="30dp">

                        <Button
                            android:id="@+id/acceptButton"
                            android:layout_width="130dp"
                            android:layout_height="match_parent"
                            android:text="@string/accept"
                            android:textColor="#ffffff"
                            android:fontFamily="@font/proxima_nova_bold"
                            android:layout_marginRight="20dp"
                            android:background="@drawable/button_shape"/>
                        <Button
                            android:id="@+id/rejectButton"
                            android:layout_width="130dp"
                            android:layout_height="match_parent"
                            android:text="@string/reject"
                            android:textColor="@color/colorBlue"
                            android:fontFamily="@font/proxima_nova_bold"
                            android:background="@drawable/button_shape_2"/>
                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>







        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/avi"
        style="@style/AVLoadingIndicatorView.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:indicatorColor="@color/colorBlue"
        app:indicatorName="BallClipRotatePulseIndicator"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>